[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/GravityBold8.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/hints_overlay/HintsOverlay.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )
Button/colors/font_color = Color( 0.992157, 0.960784, 0.890196, 0.705882 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.992157, 0.960784, 0.890196, 0.392157 )
Button/colors/font_color_pressed = Color( 0.992157, 0.960784, 0.890196, 0.392157 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
CheckBox/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 0.509804 )
CheckBox/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
CheckBox/colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 0.705882 )
CheckBox/colors/font_color_hover_pressed = Color( 0.878431, 0.878431, 0.878431, 0.705882 )
CheckBox/colors/font_color_pressed = Color( 0.878431, 0.878431, 0.878431, 0.509804 )
CheckBox/constants/check_vadjust = 0
CheckBox/constants/hseparation = 4
CheckBox/fonts/font = SubResource( 6 )
CheckBox/icons/checked = null
CheckBox/icons/radio_checked = null
CheckBox/icons/radio_unchecked = null
CheckBox/icons/unchecked = null
CheckBox/styles/disabled = null
CheckBox/styles/focus = null
CheckBox/styles/hover = null
CheckBox/styles/hover_pressed = null
CheckBox/styles/normal = null
CheckBox/styles/pressed = null
Label/colors/font_color = Color( 0.992157, 0.960784, 0.890196, 0.509804 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[node name="HintsOverlay" type="Control"]
margin_right = 800.0
margin_bottom = 500.0
theme = SubResource( 8 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlphaTween" type="Tween" parent="."]

[node name="Player1Hints" type="VBoxContainer" parent="."]
margin_left = 104.0
margin_top = 224.0
margin_right = 270.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1UpHint" type="Label" parent="Player1Hints"]
margin_right = 166.0
margin_bottom = 16.0
text = "Up [w]"
__meta__ = {
"_edit_lock_": true
}

[node name="Player1DownHint" type="Label" parent="Player1Hints"]
margin_top = 20.0
margin_right = 166.0
margin_bottom = 36.0
text = "Down [s]"
__meta__ = {
"_edit_lock_": true
}

[node name="Player1ReadyHint" type="Label" parent="Player1Hints"]
margin_top = 40.0
margin_right = 166.0
margin_bottom = 56.0
text = "Ready [space]"
__meta__ = {
"_edit_lock_": true
}

[node name="Player2Hints" type="VBoxContainer" parent="."]
margin_left = 536.0
margin_top = 224.0
margin_right = 702.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2UpHint" type="Label" parent="Player2Hints"]
margin_right = 166.0
margin_bottom = 16.0
text = "Up [up]"
align = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Player2DownHint" type="Label" parent="Player2Hints"]
margin_top = 20.0
margin_right = 166.0
margin_bottom = 36.0
text = "Down [down]"
align = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Player2ReadyHint" type="Label" parent="Player2Hints"]
margin_top = 40.0
margin_right = 166.0
margin_bottom = 56.0
text = "Ready [enter]"
align = 2
__meta__ = {
"_edit_lock_": true
}

[node name="MiscHints" type="VBoxContainer" parent="."]
margin_left = 312.0
margin_top = 424.0
margin_right = 494.0
margin_bottom = 468.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseHint" type="Label" parent="MiscHints"]
margin_top = 4.0
margin_right = 182.0
margin_bottom = 20.0
text = "Pause [ESC]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HideHintsButton" type="Button" parent="MiscHints"]
margin_top = 24.0
margin_right = 182.0
margin_bottom = 40.0
text = "Hide controls"
[connection signal="pressed" from="MiscHints/HideHintsButton" to="." method="_on_HideHintsButton_pressed"]
